[gd_scene load_steps=11 format=3 uid="uid://b8h4xf5yh2x4t"]

[ext_resource type="PackedScene" uid="uid://d2y8xf5yh2x3s" path="res://scenes/star_field.tscn" id="1_1"]
[ext_resource type="PackedScene" uid="uid://bqg3xf5yh2x2r" path="res://scenes/player_ship.tscn" id="2_1"]
[ext_resource type="Script" path="res://scripts/phase0/smooth_camera.gd" id="3_1"]
[ext_resource type="PackedScene" uid="uid://dqsj0f1qyq8ch" path="res://scenes/asteroid.tscn" id="4_1"]
[ext_resource type="Script" path="res://scripts/phase1/game_state.gd" id="5_1"]
[ext_resource type="Script" path="res://scripts/phase1/base_station.gd" id="6_1"]
[ext_resource type="Script" path="res://scripts/phase1/hud.gd" id="7_1"]
[ext_resource type="Script" path="res://scripts/phase1/base_ui.gd" id="8_1"]
[ext_resource type="Script" path="res://scripts/phase1/mining_laser.gd" id="9_1"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_1"]
vertices = PackedVector2Array(-2000, -2000, 2000, -2000, 2000, 2000, -2000, 2000)
polygons = PackedInt32Array(0, 1, 2, 3)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 36.0

[node name="Main" type="Node2D"]

[node name="GameState" type="Node" parent="."]
script = ExtResource("5_1")

[node name="StarField" parent="." instance=ExtResource("1_1")]

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_1")

[node name="AsteroidField" type="Node2D" parent="."]

[node name="AsteroidA" parent="AsteroidField" instance=ExtResource("4_1")]
position = Vector2(350, -220)

[node name="AsteroidB" parent="AsteroidField" instance=ExtResource("4_1")]
position = Vector2(-280, 180)

[node name="AsteroidC" parent="AsteroidField" instance=ExtResource("4_1")]
position = Vector2(180, 260)

[node name="BaseStation" type="Area2D" parent="."]
position = Vector2(0, 320)
script = ExtResource("6_1")
hud_path = NodePath("../HUD")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseStation"]
shape = SubResource("CircleShape2D_1")

[node name="PlayerShip" parent="." instance=ExtResource("2_1")]
position = Vector2(0, 0)
game_state_path = NodePath("../GameState")

[node name="MiningLaser" type="Line2D" parent="."]
script = ExtResource("9_1")
width = 2.0
default_color = Color(0.1, 0.9, 1, 0.8)
player_ship_path = NodePath("../PlayerShip")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_1")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("7_1")
game_state_path = NodePath("../GameState")
player_ship_path = NodePath("../PlayerShip")
base_ui_path = NodePath("BaseUI")

[node name="HUDPanel" type="Panel" parent="HUD"]
offset_left = 16.0
offset_top = 16.0
offset_right = 260.0
offset_bottom = 140.0

[node name="CargoLabel" type="Label" parent="HUD/HUDPanel"]
offset_left = 12.0
offset_top = 12.0
offset_right = 220.0
offset_bottom = 34.0
text = "Cargo (Iron): 0/100"

[node name="CreditsLabel" type="Label" parent="HUD/HUDPanel"]
offset_left = 12.0
offset_top = 38.0
offset_right = 220.0
offset_bottom = 60.0
text = "Credits: 0"

[node name="MiningProgress" type="ProgressBar" parent="HUD/HUDPanel"]
offset_left = 12.0
offset_top = 72.0
offset_right = 220.0
offset_bottom = 100.0
value = 0.0
visible = false

[node name="BaseUI" type="Control" parent="HUD"]
script = ExtResource("8_1")
game_state_path = NodePath("../../GameState")
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = -260.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 190.0

[node name="Panel" type="Panel" parent="HUD/BaseUI"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/BaseUI/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="SellButton" type="Button" parent="HUD/BaseUI/Panel/VBoxContainer"]
text = "Sell All Cargo"

[node name="UpgradeButton" type="Button" parent="HUD/BaseUI/Panel/VBoxContainer"]
text = "Buy Cargo Upgrade"

[node name="InfoLabel" type="Label" parent="HUD/BaseUI/Panel/VBoxContainer"]
text = "Upgrade: +50 cargo (Cost: 500)"
